hello/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hello-kubernetes
