hello/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: hello.192.168.205.2.traefik.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-service
                port:
                  number: 80
  tls:
    - hosts:
        - hello.192.168.205.2.traefik.me
